[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mybootstrap_mvc_itskovichanton"
version = "1.0.0"
authors = [
    { name = "Anton Itskovich", email = "itskovichae@gmail.com" },
]
description = "My bootstrap app engine mvc classes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/itskovichanton/pymvc"